--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<h1>morals pagina de prueba en neste lugar</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>¡Morals!</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background: #fef5e7;
+            color: #333;
+        }
+
+        header {
+            background-color: #e74c3c;
+            color: white;
+            text-align: center;
+            padding: 1em;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: row;
+            padding: 2em;
+            align-items: center;
+            justify-content: center;
+            gap: 2em;
+            flex-wrap: wrap;
+        }
+
+        .promo-text {
+            max-width: 500px;
+        }
+
+
+            .promo-text h2 {
+                font-size: 2em;
+                margin-bottom: 0.5em;
+            }
+
+            .promo-text button {
+                background-color: #e74c3c;
+                color: white;
+                border: none;
+                padding: 1em 2em;
+                font-size: 1em;
+                cursor: pointer;
+                border-radius: 5px;
+            }
+
+
+
+        .promo-img img {
+            width: 300px;
+            border-radius: 15px;
+        }
+
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 1em;
+            margin-top: 2em;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>¡Bienvenido a morals!</h1>
+        <p>Un local de comida rapida sabrosa</p>
+    </header>
+
+    <div class="container">
+        <div class="promo-text">
+            <h2>Promosion de combo</h2>
+            <p>Incluye una amburguesa,un frape y un postre a gusto por solo <strong>$50</strong>. ¡Solo por hoy!</p>
+            <button>¡Haz tu pedido ahora!</button>
+        </div>
+        <div class="promo-img">
+            <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?auto=format&fit=crop&w=800&q=80" alt="Hamburguesa deliciosa">
+        </div>
+    </div>
+
+    <footer>
+        📍 Miguel Hidalgo 28-30, Mexquemeca 62827 Yecapixtla Mor| ☎️ 735 332 5333 | 🕒 12pm - 11pm
+    </footer>
+
+</body>
+</html>
