--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 <body>
 
     <header>
-        <h1>¡Bienvenido a morals!</h1>
+        <h1>¡Bienvenido a Morals!</h1>
         <p>Un local de comida rapida sabrosa</p>
     </header>
 
     <div class="container">
         <div class="promo-text">
-            <h2>Promosion de combo</h2>
-            <p>Incluye una amburguesa,un frape y un postre a gusto por solo <strong>$50</strong>. ¡Solo por hoy!</p>
+            <h2>Promoción de combo</h2>
+            <p>Incluye una hamburguesa,un frape y un postre a gusto por solo <strong>$50</strong>. ¡Solo por hoy!</p>
             <button>¡Haz tu pedido ahora!</button>
         </div>
         <div class="promo-img">
