--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
                 border-radius: 5px;
             }
 
-
+.promo-text buttonn {
+                background-color: #e74c3c;
+                color: white;
+                border: none;
+                padding: 1em 2em;
+                font-size: 1em;
+                cursor: pointer;
+                border-radius: 5px;
+            }
 
         .promo-img img {
             width: 300px;
@@ -86,6 +94,6 @@
     <footer>
         📍 Miguel Hidalgo 28-30, Mexquemeca 62827 Yecapixtla Mor| ☎️ 735 332 5333 | 🕒 12pm - 11pm
     </footer>
-
+<div class="promo-text butonn"> Siguente pagina</div>
 </body>
 </html>
