--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
     <footer>
         📍 Miguel Hidalgo 28-30, Mexquemeca 62827 Yecapixtla Mor| ☎️ 735 332 5333 | 🕒 12pm - 11pm
     </footer>
-<butonn>Siguente pagina</butonn> 
+<buttonn>Siguente pagina   ccccc</buttonn> 
 </body>
 </html>
