--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 border-radius: 5px;
             }
 
-.promo-text buttonn {
+.promo-textt button {
                 background-color: #e74c3c;
                 color: white;
                 border: none;
@@ -94,6 +94,6 @@
     <footer>
         📍 Miguel Hidalgo 28-30, Mexquemeca 62827 Yecapixtla Mor| ☎️ 735 332 5333 | 🕒 12pm - 11pm
     </footer>
-<buttonn>Siguente pagina   ccccc</buttonn> 
+<button>Siguente pagina   ccccc</button> 
 </body>
 </html>
