--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="container">
         <div class="promo-textt">
-            <button>Siguente pagina   </button> 
+            <button>  <a href="des.html">Siguente pagina</a> </button> 
         
         </div>
     </div>
